--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ project( Pathfinder )
 set( CMAKE_CXX_STANDARD 17 )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
 
-add_subdirectory( external )
+#add_subdirectory( external )
 add_subdirectory( src )
