--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,6 @@
-set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
-
-
 file( GLOB_RECURSE ${PROJECT_NAME}_SOURCES "*.cpp" )
 
 add_executable( ${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES} )
 
-target_include_directories( ${PROJECT_NAME} PUBLIC "../include" )
-#target_link_libraries( ${PROJECT_NAME} PUBLIC )
+#target_include_directories( ${PROJECT_NAME} PUBLIC ConfigParserLib )
+target_link_libraries( ${PROJECT_NAME} PUBLIC ConfigParserLib )
