Optionalised building tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,14 @@ set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 set( CMAKE_CXX_STANDARD 17 )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
 
+project( ConfigParser )
+
+option( BUILD_TESTS "Build test programs" OFF )
+
 add_library( ConfigParserLib INTERFACE )
 
 target_include_directories( ConfigParserLib INTERFACE "include" )
 
-project( ConfigParser )
-
-#add_subdirectory( external )
-add_subdirectory( src )
+if( BUILD_TESTS )
+	add_subdirectory( src )
+endif( BUILD_TESTS )
