--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+project( ConfigParserTest )
+
 file( GLOB_RECURSE ${PROJECT_NAME}_SOURCES "*.cpp" )
 
 add_executable( ${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES} )
